Changelog
=========


1.0.2 (unreleased)
------------------

- Add support for Plone 5.1. [mbaechtold]


1.0.1 (2016-09-26)
------------------

- ZCML: Include monkeypatcher before using it. [jone]


1.0.0 (2016-09-13)
------------------

- Fix edge case with collective.indexing and other 3rd party packages and rename a nested structure.
  [mathias.leimgruber]


1.0.0a4 (2016-09-07)
--------------------

- Update modification date when moving an object. [jone]


1.0.0a3 (2016-09-07)
--------------------

- Make add-on more robust by handling a special case which may happen when
  "collective.indexing" is installed and an object is created with "plone.api"
  in a subscriber listening on "IObjectAddedEvent".
  [mbaechtold, mathias.leimgruber]


1.0.0a2 (2016-09-05)
--------------------

- Implement `delete`.
  [mathias.leimgruber]


1.0.0a1 (2016-09-02)
--------------------

- Init Implementation.
  [jone & mathias.leimgruber]

- Package generated using bobtemplates.4teamwork